test/testcase/version_1/pass/track-whitespace-anyURI.xspf
<?xml version="1.0" encoding="utf-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList>
		<track>
			<location>http://example.com/no_whitespace/</location>
			<location>
http://example.com/whitespace_before/</location>
			<location>http://example.com/whitespace_after/
</location>
			<location>
http://example.com/whitespace_before_and_after/
			</location>
		</track>
	</trackList>
</playlist>
