test/testcase/version_1/fail/track-whitespace-in-between.xspf
<?xml version="1.0" encoding="utf-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList>
		<track>
			<!-- INVALID: whitespace in between, possible cut out completely
				(instead of replacing with a single space) by mistake
				and therefore not detected as invalid in some implementations -->
			<location>http://example.com/
line_two/
line_three/</location>
		</track>
	</trackList>
</playlist>
